--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native": "0.46.2",
     "react-native-camera-kit": "5.3.6",
     "react-native-masked-text": "^1.5.3",
+    "react-native-material-textfield": "^0.8.3",
     "react-native-modal-dropdown": "0.4.4",
     "react-native-simple-radio-button": "2.6.0",
     "react-native-vector-icons": "4.3.0",
@@ -50,6 +51,7 @@
     "react-native": "0.46.2",
     "react-native-camera-kit": "5.3.6",
     "react-native-masked-text": "^1.5.3",
+    "react-native-material-textfield": "^0.8.3",
     "react-native-modal-dropdown": "0.4.4",
     "react-native-simple-radio-button": "2.6.0",
     "react-native-vector-icons": "4.3.0",
