Using react-native-material-textfield with numeric

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-native": "0.46.2",
     "react-native-camera-kit": "5.3.6",
     "react-native-masked-text": "^1.5.3",
-    "react-native-material-textfield": "^0.8.3",
+    "react-native-material-textfield": "git+https://github.com/egon12/react-native-material-textfield.git",
     "react-native-modal-dropdown": "0.4.4",
     "react-native-simple-radio-button": "2.6.0",
     "react-native-vector-icons": "4.3.0",
@@ -51,7 +51,7 @@
     "react-native": "0.46.2",
     "react-native-camera-kit": "5.3.6",
     "react-native-masked-text": "^1.5.3",
-    "react-native-material-textfield": "^0.8.3",
+    "react-native-material-textfield": "git+https://github.com/egon12/react-native-material-textfield.git",
     "react-native-modal-dropdown": "0.4.4",
     "react-native-simple-radio-button": "2.6.0",
     "react-native-vector-icons": "4.3.0",
