Change modal dropdown to picker and remove modal-dropdown dependencies

--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.46.2",
     "react-native-camera-kit": "5.3.6",
-    "react-native-masked-text": "^1.5.3",
     "react-native-material-textfield": "git+https://github.com/egon12/react-native-material-textfield.git",
-    "react-native-modal-dropdown": "0.4.4",
     "react-native-simple-radio-button": "2.6.0",
     "react-native-vector-icons": "4.3.0",
     "react-test-renderer": "16.0.0-alpha.12"
@@ -46,13 +44,12 @@
     "eslint-plugin-jest": "^20.0.3",
     "eslint-plugin-react": "^7.1.0",
     "jest": "20.0.4",
+    "numeral": "^2.0.6",
     "prop-types": "15.5.10",
     "react": "16.0.0-alpha.12",
     "react-native": "0.46.2",
     "react-native-camera-kit": "5.3.6",
-    "react-native-masked-text": "^1.5.3",
     "react-native-material-textfield": "git+https://github.com/egon12/react-native-material-textfield.git",
-    "react-native-modal-dropdown": "0.4.4",
     "react-native-simple-radio-button": "2.6.0",
     "react-native-vector-icons": "4.3.0",
     "react-test-renderer": "16.0.0-alpha.12"
