--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "peerDependencies": {
     "d3-scale-chromatic": "^1.1.1",
     "prop-types": "15.5.10",
+    "numeral": "^2.0.6",
     "moment": "^2.18.1",
     "react": "16.0.0-alpha.12",
     "react-native": "0.46.2",
@@ -45,6 +46,7 @@
     "eslint-plugin-react": "^7.1.0",
     "jest": "20.0.4",
     "numeral": "^2.0.6",
+    "moment": "^2.18.1",
     "prop-types": "15.5.10",
     "react": "16.0.0-alpha.12",
     "react-native": "0.46.2",
