--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "babel src -d dist --ignore '**/*.test.js'",
     "test": "jest",
-    "eslint": "eslint src"
+    "eslint": "eslint src",
+		"publish": "git checkout master; git merge dev; npm run build; npm version patch; git push; npm publish; git checkout dev;"
   },
   "repository": {
     "type": "git",
