--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "babel src -d dist --ignore '**/*.test.js'",
     "test": "jest",
     "eslint": "eslint src",
-    "preversion": "npm run eslint --fix; npm test; ",
+    "preversion": "npm run eslint -- --fix; npm test; ",
     "version": "npm run build && git add -A dist",
-    "postversion": "git checkout master; git merge dev; git push; git push --tags; git checkout dev"
+    "postversion": "git checkout master; git merge dev; git push; git push --tags; npm publish; git checkout dev"
   },
   "repository": {
     "type": "git",
@@ -34,6 +34,7 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.46.2",
     "react-native-material-textfield": "egon12/react-native-material-textfield.git",
+		"react-native-material-dropdown":"0.2.0",
     "react-native-simple-radio-button": "2.6.0",
     "react-native-vector-icons": "4.3.0",
     "react-test-renderer": "16.0.0-alpha.12"
@@ -54,6 +55,7 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.46.2",
     "react-native-material-textfield": "egon12/react-native-material-textfield.git",
+		"react-native-material-dropdown":"0.2.0",
     "react-native-simple-radio-button": "2.6.0",
     "react-native-vector-icons": "4.3.0",
     "react-test-renderer": "16.0.0-alpha.12"
