--- a/package.json
+++ b/package.json
@@ -41,21 +41,22 @@
   },
   "devDependencies": {
     "babel-cli": "6.24.1",
-    "babel-jest": "20.0.3",
     "babel-eslint": "^7.2.3",
+    "babel-jest": "20.0.3",
     "babel-preset-react-native": "2.1.0",
+    "coveralls": "^2.13.1",
     "d3-scale-chromatic": "^1.1.1",
     "eslint": "^4.4.1",
     "eslint-plugin-jest": "^20.0.3",
     "eslint-plugin-react": "^7.1.0",
     "jest": "20.0.4",
-    "numeral": "^2.0.6",
     "moment": "^2.18.1",
+    "numeral": "^2.0.6",
     "prop-types": "15.5.10",
     "react": "16.0.0-alpha.12",
     "react-native": "0.46.2",
-    "react-native-material-textfield": "egon12/react-native-material-textfield.git",
     "react-native-material-dropdown": "0.2.0",
+    "react-native-material-textfield": "egon12/react-native-material-textfield.git",
     "react-native-simple-radio-button": "2.6.0",
     "react-native-vector-icons": "4.3.0",
     "react-test-renderer": "16.0.0-alpha.12"
