--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ node_js:
 script:
   - npm test -- --coverage
 after_success:
-  - ./node_modules/.bin/coveralls
+  - cat coverage/lcov.info | ./node_modules/.bin/coveralls
