--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-material-dropdown": "0.2.0",
     "react-native-simple-radio-button": "2.6.0",
     "react-native-vector-icons": "4.3.0",
-    "react-test-renderer": "16.0.0-alpha.12"
+    "react-test-renderer": "16.0.0-alpha.12",
+    "react-native-checkbox-group": "1.0.3"
   },
   "devDependencies": {
     "babel-cli": "6.24.1",
@@ -59,7 +60,8 @@
     "react-native-material-textfield": "egon12/react-native-material-textfield.git",
     "react-native-simple-radio-button": "2.6.0",
     "react-native-vector-icons": "4.3.0",
-    "react-test-renderer": "16.0.0-alpha.12"
+    "react-test-renderer": "16.0.0-alpha.12",
+    "react-native-checkbox-group": "1.0.3"
   },
   "jest": {
     "preset": "react-native",
